# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/telephony/core_service/core_service_aafwk.gni")
import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/services/sim"
HDF_FRAMEWORKS = "//drivers/hdf/frameworks"
TELEPHONY_FRAMEWORKS_ROOT = "//base/telephony/core_service/frameworks/native/"

ohos_executable("tel_sim_test") {
  install_enable = true
  sources = [
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_information.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_search_result.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_state.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/signal_information.cpp",
    "$TELEPHONY_SIM_ROOT/test/test.cpp",
  ]

  include_dirs = [
    "//base/telephony/data_storage/sim/include",
    "//base/telephony/data_storage/common/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/base/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/state_registry",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/data_storage",
    "$TELEPHONY_SIM_ROOT/include",

    "$HDF_FRAMEWORKS/ability/sbuf/include",
    "$HDF_FRAMEWORKS/core/shared/include",
    "$HDF_FRAMEWORKS/core/host/include",
    "$HDF_FRAMEWORKS/core/master/include",
    "$HDF_FRAMEWORKS/include/core",
    "$HDF_FRAMEWORKS/include/utils",
    "$HDF_FRAMEWORKS/utils/include",
    "$HDF_FRAMEWORKS/include/osal",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CoreServiceApi\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "${aafwk_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/telephony/core_service:tel_core_service",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_core",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "ril_device_driver_interface:hril_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  part_name = "core_service"
  subsystem_name = "telephony"
}
