# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
SUBSYSTEM_DIR = "../../../.."
import("//build/ohos.gni")

TELEPHONY_CORE_SERVICE_ROOT = "$SUBSYSTEM_DIR/core_service"
TELEPHONY_SIM_ROOT = "$SUBSYSTEM_DIR/core_service/services/sim"
TELEPHONY_FRAMEWORKS_ROOT = "$SUBSYSTEM_DIR/core_service/frameworks/native/"

ohos_executable("tel_sim_test") {
  install_enable = true
  sources = [
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_information.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_search_result.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_state.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/signal_information.cpp",
    "$TELEPHONY_SIM_ROOT/test/test.cpp",
  ]

  include_dirs = [
    "$TELEPHONY_CORE_SERVICE_ROOT/base/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/include",
    "$TELEPHONY_SIM_ROOT/include",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceSimTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  configs = [ "$SUBSYSTEM_DIR/core_service/utils:telephony_log_config" ]

  deps = [
    "$SUBSYSTEM_DIR/core_service:tel_core_service",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits:tel_core_service_api",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  part_name = "core_service"
  subsystem_name = "telephony"
}
