# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/services/sim"

ohos_executable("tel_ril_test") {
  install_enable = true
  sources = [ "tel_ril_test.cpp" ]

  include_dirs = [
    "$TELEPHONY_CORE_SERVICE_ROOT/services/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/frameworks/native/include",
    "//base/telephony/core_service/interfaces/innerkits/state_registry",
    "$TELEPHONY_SIM_ROOT/include",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"TelRilTest\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "//base/telephony/core_service:tel_core_service",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "ril_adapter:hril_innerkits",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "core_service"
  subsystem_name = "telephony"
}
