# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

TELEPHONY_CORE_SERVICE_ROOT = "../../.."
import("//build/ohos.gni")
TELEPHONY_SIM_ROOT = "$TELEPHONY_CORE_SERVICE_ROOT/services/sim"

ohos_executable("tel_ril_test") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  install_enable = true
  sources = [ "tel_ril_test.cpp" ]

  include_dirs = [
    "$TELEPHONY_CORE_SERVICE_ROOT/services/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/frameworks/native/include",
    "$TELEPHONY_SIM_ROOT/include",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceRilTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  configs = [ "$TELEPHONY_CORE_SERVICE_ROOT/utils:telephony_log_config" ]

  deps = [ "$TELEPHONY_CORE_SERVICE_ROOT:tel_core_service" ]

  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_ril:hril_innerkits",
    "drivers_interface_ril:ril_idl_headers",
    "eventhandler:libeventhandler",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "power_manager:powermgr_client",
    "samgr:samgr_proxy",
  ]

  part_name = "core_service"
  subsystem_name = "telephony"
}
