# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
SUBSYSTEM_DIR = "../../../.."
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("SetShowNameFuzzTest") {
  module_output_path = "core_service/SetShowNameFuzzTest"
  module_out_path = module_output_path
  fuzz_config_file =
      "$SUBSYSTEM_DIR/core_service/test/fuzztest/setshowname_fuzzer"

  include_dirs = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/include",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "$SUBSYSTEM_DIR/core_service/services/core/include",
    "$SUBSYSTEM_DIR/core_service/services/network_search/include",
    "$SUBSYSTEM_DIR/core_service/services/sim/include",
    "$SUBSYSTEM_DIR/core_service/test/fuzztest/common_fuzzer",
    "$SUBSYSTEM_DIR/core_service/services/tel_ril/include",
    "commonlibrary/c_utils/base/include",
  ]

  configs = [ "$SUBSYSTEM_DIR/core_service/utils:telephony_log_config" ]

  deps = [
    "$SUBSYSTEM_DIR/core_service:tel_core_service",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits:tel_core_service_api",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:data_ability_helper",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "drivers_interface_ril:hril_innerkits",
    "drivers_interface_ril:ril_idl_headers",
    "hdf_core:libhdi",
    "init:libbegetutil",
    "ipc:ipc_core",
    "napi:ace_napi",
    "netmanager_base:net_conn_manager_if",
    "netmanager_ext:net_tether_manager_if",
    "power_manager:powermgr_client",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceFuzzTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
    "$SUBSYSTEM_DIR/core_service/test/fuzztest/common_fuzzer/addcoreservicetoken_fuzzer.cpp",
    "setshowname_fuzzer.cpp",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":SetShowNameFuzzTest",
  ]
}
###############################################################################
